--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,36 @@ html {
     box-sizing: inherit;
   } 
 
+
+/* The hero image */
+.hero-image {
+    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+    /* background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5), url("/images/background.jpg")); */
+    /* background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c); */
+    background-image: url("/images/background.jpg");  
+    /* filter: brightness(50%); */
+    /* Set a specific height */
+    height: 400px;  
+    /* Position and center the image to scale nicely on all screens */
+    /* background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative; */
+    justify-content: center;
+    align-items: center;
+    }
+
+
+/* Place text in the middle of the image */
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+    color: white !important; 
+  }
+
 footer {
     justify-content: flex-start; 
     background-color: #f8f9fa;
