--- a/css/styles.css
+++ b/css/styles.css
@@ -10,35 +10,6 @@ html {
 }
 
 
-/* The hero image */
-.hero-image {
-    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-    /* background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5), url("/images/background.jpg")); */
-    /* background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c); */
-    background-image: url("/images/background.jpg");  
-    /* filter: brightness(50%); */
-    /* Set a specific height */
-    height: 400px;  
-    /* Position and center the image to scale nicely on all screens */
-    /* background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative; */
-    justify-content: center;
-    align-items: center;
-    }
-
-
-/* Place text in the middle of the image */
-.hero-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); 
-    color: white !important; 
-  }
-
 footer {
   justify-content: flex-start;
   background-color: #f8f9fa;
@@ -73,18 +44,17 @@ footer {
 
 #wordsOnImage {
   color: white;
-}
-
-.column {
-  align: center;
-  float: left;
-  width: 33.33%;
+  text-align: center;
 }
 
 .image-container {
   display: flex;
   object-fit: fill;
   justify-content: center;
+}
+
+.heading {
+    margin-bottom: 40px;
 }
 
 /* Clear floats after the columns */
@@ -94,9 +64,108 @@ footer {
   clear: both;
 }
 
-.column img {
-  max-height: 100%;
-  min-width: 100%;
-  object-fit: fill;
-  padding: 25px 30px;
+.row {
+    margin: auto; 
+    width: 100%; 
+    padding-top: 25px; 
+    padding-bottom: 25px;
 }
+
+.column img {
+    object-fit: cover; 
+    max-height: 100%;
+    min-width: 100%; 
+    padding: 25px 30px;
+    filter: brightness(60%);
+}
+
+.column {
+    text-align: center;
+    align-content: center;
+    float: left; 
+    width: 33.33%;
+    position: relative;
+    padding-left: 25px; 
+    padding-right: 25px; 
+  }
+
+.column .img-text{
+    color: white; 
+    position: absolute;
+    z-index: 999;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    top: 68%; /* Adjust this value to move the positioned div up and down */
+    text-align: center;
+    width: 60%; /* Set the width of the positioned div */
+}
+
+.img {
+    width: 100%;
+    height: 350px;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: brightness(73%);
+ }
+
+ .img a {
+     width: 100%;
+     height: 100%;
+     display: block; 
+ }
+
+ .heading_2 {
+    margin-top: 50px; 
+    margin-bottom: 50px; 
+    align-items: center;
+    height: 600px; 
+    position: relative;
+    width: 100%; 
+ }
+
+ .heading-img {
+    width: 100%;
+    height: 100%;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: brightness(73%);
+ }
+
+ .heading_2 .heading-text {
+    color: white; 
+    position: absolute;
+    z-index: 999;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    top: 50%; /* Adjust this value to move the positioned div up and down */
+    text-align: right;
+    width: 60%; /* Set the width of the positioned div */
+ }
+
+ .animal-column {
+    justify-content: center;
+    text-align: center;
+    align-content: center;
+    float: left; 
+    width: 50%;
+    position: relative;
+    padding-left: 50px; 
+    padding-right: 50px;
+ }
+
+ .animal-column img {
+     width: 100%;
+ }
+
+ .animal-column h3 {
+     font-style: italic;
+ }
+
+
+
+
+
