--- a/css/styles.css
+++ b/css/styles.css
@@ -69,13 +69,14 @@ footer {
     width: 100%; 
     padding-top: 25px; 
     padding-bottom: 25px;
+    justify-content: center;
 }
 
 .column img {
     object-fit: cover; 
     max-height: 100%;
     min-width: 100%; 
-    padding: 25px 30px;
+    padding: 30px 30px;
     filter: brightness(60%);
 }
 
@@ -103,7 +104,7 @@ footer {
 
 .img {
     width: 100%;
-    height: 350px;
+    height: 300px;
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -178,10 +179,20 @@ footer {
   }
   .column .img-text {
     top: 60%;
-    width: 90%;
+    width: 100%;
   }
   .column .img-text h2{
     font-size: 80px;
+  }
+  .row {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+  .animal-column {
+    width: 100%;
+  }
+  .img {
+    height: 550px;
   }
 }
 
