--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,12 @@ footer {
   text-align: center;
 }
 
+#tickets {
+  text-align: center;
+  vertical-align: top;
+  top: 5% !important;
+}
+
 .image-container {
   display: flex;
   object-fit: fill;
@@ -152,11 +158,11 @@ footer {
 }
 
 .heading-text h1 {
-  font-size: 10vw; 
+  font-size: 10vw;
 }
 
 .animal-column {
-  margin: auto; 
+  margin: auto;
   justify-content: center;
   text-align: center;
   align-content: center;
@@ -170,13 +176,13 @@ footer {
 .animal-column ul {
   padding-top: 0px;
   padding-left: 75px;
-  padding-right: 0px; 
-  text-align: left; 
-  line-height: 2em; 
+  padding-right: 0px;
+  text-align: left;
+  line-height: 2em;
 }
 
 .animal-column li {
-  font-size: 15px; 
+  font-size: 15px;
 }
 
 .animal-column img {
@@ -189,10 +195,30 @@ footer {
   font-style: italic;
 }
 
-
 .animal {
-  margin-top: 100px; 
+  margin-top: 100px;
   margin-bottom: 100px;
+}
+
+.event-column {
+  justify-content: center;
+  text-align: center;
+  align-content: center;
+  float: left;
+  width: 50%;
+  position: relative;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.event-column img {
+  width: 100%;
+}
+
+.event-column h1 h2 h4 p {
+  text-align: center;
+  vertical-align: center;
+  top: 50%;
 }
 
 /* Large screens */
