--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,12 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 footer {
   justify-content: flex-start;
   background-color: #f8f9fa;
@@ -16,6 +22,10 @@ footer {
   padding-top: 20px;
   padding-left: 20px;
   width: 100%;
+}
+
+.heading {
+  margin-bottom: 40px; 
 }
 
 .company-name {
@@ -143,7 +153,7 @@ footer {
   filter: brightness(65%);
 }
 
-.heading_2 .heading-text {
+.heading-text {
   color: white;
   position: absolute;
   z-index: 999;
@@ -173,12 +183,12 @@ footer {
   padding-right: 50px;
 }
 
-.animal-column ul {
+ul {
   padding-top: 0px;
   padding-left: 75px;
   padding-right: 0px;
   text-align: left;
-  line-height: 2em;
+  line-height: 1.8em;
 }
 
 .animal-column li {
@@ -199,6 +209,50 @@ footer {
 .animal {
   margin-top: 100px;
   margin-bottom: 100px;
+}
+
+.conservation-heading {
+  margin-top: 50px;
+  margin-bottom: 40px;
+  align-items: center;
+  position: relative;
+  width: 100%;
+  line-height: 650px;
+  height:710px; 
+}
+
+.conservation-column {
+  margin: auto;
+  justify-content: center;
+  text-align: center;
+  align-content: center;
+  float: left;
+  width: 50%;
+  position: relative;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.conservation-column h2 {
+  line-height: 2.1em;
+}
+
+.conservation-column h6 {
+  line-height: 2.1em;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.conservation-column ul {
+  line-height: 2.3em; 
+  padding-left:40px; 
+  padding-right:30px;
+}
+
+.conservation-column img {
+  width: 80%;
+  padding: 10px;
+  border: 4px solid #555;
 }
 
 .event-column {
@@ -241,12 +295,62 @@ footer {
     padding-bottom: 0px;
   }
 
+  .animal {
+    margin-top: 60px;
+    margin-bottom: 50px;
+  }
+
   .animal-column {
     width: 100%;
   }
 
   .img {
-    height: 550px;
+    height: 400px;
+  }
+
+  .heading_2 {
+    height: 400px; 
+  }
+
+  .animal-column ul {
+    padding-left: 40px;
+    line-height: 1.3em;
+    padding-bottom: 20px; 
+  }
+
+  .animal-column li {
+    font-size: 14px;
+  }
+
+  .conservation-heading {
+    height: 500px; 
+  }
+
+  .conservation-column {
+    padding-top: 20px; 
+    width: 100%;
+  }
+
+  .conservation-column h2 {
+    line-height: 1.5em;
+  }
+
+  .conservation-column h6 {
+    line-height: 1.8em;
+  }
+
+  .conservation-column ul {
+    line-height: 1.8em; 
+    padding-left: 15px;
+    padding-right: 15px; 
+  }
+
+  .conservation-column img {
+    width: 75%; 
+  }
+
+  .event-column {
+    width: 50%; 
   }
 }
 
@@ -257,7 +361,76 @@ footer {
     margin-bottom: 30px;
   }
 
-  .column .img-text h2 {
-    font-size: 100px;
+  .column .img-text {
+    top: 60%;
+    width: 100%;
   }
+
+  .column .img-text h2 {
+    font-size: 50px;
+  }
+
+  .row {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .animal {
+    margin-top: 30px;
+    margin-bottom: 20px;
+  }
+
+  .animal-column {
+    width: 100%;
+  }
+
+  .img {
+    height: 400px;
+  }
+
+  .heading_2 {
+    height: 250px; 
+  }
+
+  .animal-column ul {
+    padding-left: 40px;
+    line-height: 1.3em;
+    padding-bottom: 20px; 
+  }
+
+  .animal-column li {
+    font-size: 13px;
+  }
+
+  .conservation-heading {
+    height: 400px; 
+  }
+
+  .conservation-column {
+    padding-top: 10px; 
+    width: 100%;
+  }
+
+  .conservation-column h2 {
+    line-height: 1.2em;
+  }
+
+  .conservation-column h6 {
+    line-height: 1.5em;
+  }
+
+  .conservation-column ul {
+    line-height: 1.5em; 
+    padding-left: 10px;
+    padding-right: 10px; 
+  }
+
+  .conservation-column img {
+    width: 80%; 
+  }
+
+  .event-column {
+    width: 100%; 
+  }
+  
 }
