--- a/css/styles.css
+++ b/css/styles.css
@@ -268,9 +268,12 @@ ul {
 }
 
 .conservation-column img {
-  width: 80%;
-  padding: 10px;
-  border: 4px solid #555;
+  width: 100%;
+  height: 300px;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: brightness(73%);
 }
 
 .event-column {
