--- a/css/styles.css
+++ b/css/styles.css
@@ -294,6 +294,12 @@ ul {
   align-content: center;
 }
 
+.threatened-species h1, h4, p {
+  text-align: center;
+  align-content: center;
+  align-items: center;
+}
+
 /* Large screens */
 @media only screen and (min-width: 1024px) {}
 
