Adding family Common Name

--- a/css/styles.css
+++ b/css/styles.css
@@ -294,7 +294,7 @@ ul {
   align-content: center;
 }
 
-.threatened-species h1, h4, p {
+.threatened-species h1, h2, h4, p {
   text-align: center;
   align-content: center;
   align-items: center;
